# online_dmpc

./: .gitignore  .gitmodules  LICENSE  README.md
cpp/: CMakeLists.txt  main.cpp
cpp/config/: config.json  help.txt
cpp/include/: avoidance.h  bezier.h  generator.h  model.h  simulator.h  solver.h
cpp/results/: plot_results.m  trajectories.txt
cpp/src/: avoidance.cpp  bezier.cpp  generator.cpp  main.cpp  model.cpp  simulator.cpp  solver.cpp
extras/arrow/: license.txt
extras/plotBarStackGroups/: license.txt
matlab/: BVC_constraints.m  BVC_constraints_ref.m  BVC_constraints_state.m  Bern2power.m  MPC_update.m  augment_array_ndim.m  build_constraint.m  build_constraint_ref.m  build_eq_constraints.m  build_ineq_constraints.m  cell_derivate_ctrl_pts.m  check_horizon.m  cost_function.m  example.m  example.m~  example_soft.m  getA0.m  getABmodel.m  getDerivatives.m  getGammaSamples.m  getLambda.m  getQ.m  getQ.m~  getTau.m  getTauPos.m  getTauSamples.m  get_a0.m  get_lambda.m  get_model.m  get_sample_mat.m  mat_bernstein2power.m  mat_sample_poly.m  mat_sum_sqrd_derivatives.m  nocomm_softconstraints.m  ondemand_constraints.m  ondemand_softconstraints.m  ondemand_softconstraints_ref.m  plot_3d_visualization.m  plot_3d_visualization_poster.m  randomExchange.m  (+15 more)
matlab/config/: mpc_params.m  mpc_params.mat  sim_params.m  sim_params.mat  sim_params2.mat
matlab/plot/: plot_2agent_video.m  plot_comp_allCA.m  plot_comp_bvc.m  plot_comp_repelbvc.m  plot_disturbance.m  plot_disturbance_exp.m  plot_from_bag.m  plot_hoop_test_paper.m  plot_hoop_test_video.m  plot_obstaclefree_video.m
matlab/plot/sim_data/: disturbance.mat  mellinger_1Hz.mat  online_dmpc_10Hz.mat  online_dmpc_1Hz.mat  online_dmpc_1Hz_perturbations.mat  online_dmpc_openloop.mat  sim_step_response_mellinger.mat  step_experimental1.mat  step_experimental2.mat  step_experimental3.mat
matlab/tests/: build_all_matrices.m  comp_dmpc_bvc.m  comp_input_vs_state.m  comp_repel_vs_bvc.m  comp_vs_bvc.m  run_algorithm.m
matlab/unused/: BVC_constraints.m  BVC_constraints_state.m  cost_function.m  run.m
